# homework_of_data_structure

Chicken/: Chicken.cpp
LinkedList/: CMakeLists.txt
LinkedList/inc/: LinkedList.hpp
LinkedList/src/: main.cpp
List/: CMakeLists.txt  report.md  report.tex
List/inc/: List.h
List/src/: List.cpp
big_project/: CMakeLists.txt  Makefile  report.tex
big_project/inc/: expression_evaluator.h
big_project/src/: expression_evaluator.cpp  main.cpp
hello/: hello.cpp
hello/src/: CMakeLists.txt
